# rustic_pos

./: .gitignore  ANALYSIS.md  MANIFEST.in  README.md  instructions.txt  pyproject.toml  setup.py
rustic_pos/: hooks.py  modules.txt
rustic_pos/fixtures/: rustic_pos_fields.json
rustic_pos/public/js/: rustic_pos.bundle.js
